<resources>
    <string name="app_name">Conduit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="have_an_account">Have an account?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="title">Title</string>
    <string name="publish">Publish</string>
    <string name="short_bio_about_you">Short bio about you</string>
    <string name="new_password">New password</string>
    <string name="update_profile">Update profile</string>
    <string name="log_out">Log out</string>
    <string name="error_something_went_wrong">Oops, something went wrong.</string>
    <string name="error_no_internet_connection">Hmm…it looks like you\'re offline.</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="submit">Submit</string>
    <string name="new_article">New article</string>
    <string name="profile">Profile</string>
    <string name="author_followed">Author followed</string>
    <string name="author_unfollowed">Author unfollowed</string>
    <string name="article_added_to_favorites">Article added to favorites</string>
    <string name="article_removed_from_favorites">Article removed from favorites</string>
    <string name="description">Description</string>
    <string name="article_published_successfully">Article published successfully</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favorited_articles">Favorited articles</string>
    <string name="my_articles">My articles</string>
    <string name="view_profile">View profile</string>
    <string name="create_article">Create article</string>
    <string name="you_have_not_created_any_articles">You have not created any articles. \nPlease create one to see it in the list.</string>
    <string name="you_have_no_favorite_articles">You have no favorite articles. \nPlease add some to the list</string>
    <string name="logout">Logout</string>
    <string name="article">Article</string>
    <string name="email_cannot_be_blank">Email can\'t be blank</string>
    <string name="password_cannot_be_blank">Password can\'t be blank</string>
    <string name="username_cannot_be_blank">Username can\'t be blank</string>
</resources>